# desktop_search

./: .gitignore  Cargo.toml  README.md
benchmarks/: Cargo.toml
benchmarks/src/: coco.rs  main.rs  mrobust.rs
client/: Cargo.toml  tauri.conf.json
client/icons/: icon.icns
client/src/: assets.rs  main.rs  search.rs  settings.rs  status.rs
client_ui/: Cargo.toml  Trunk.toml  index.html
client_ui/public/: base.css  water.min.css
client_ui/public/translations/: en-US.ftl  ru-RU.ftl
client_ui/src/: app.rs  formatting.rs  main.rs  search.rs  settings.rs  status.rs
client_ui/src/app/: widgets.rs
client_ui/src/search/: filter_groups.rs  filters.rs  results.rs
client_ui/src/search/filters/: content_type.rs
client_ui/src/settings/: widgets.rs
common_lib/: Cargo.toml
common_lib/src/: actions.rs  elasticsearch.rs  embeddings.rs  indexer.rs  lib.rs  search.rs  settings.rs  status.rs
data/: coco_captions_val2017_ru.json  coco_en_queries_all_results.csv  coco_en_queries_recall.csv  coco_indexing_time_plot.csv  coco_indexing_time_size.csv  coco_ru_queries_all_results.csv  coco_ru_queries_recall.csv  docfetcher_benchmark.py  docfetcher_mrobust_en_queries_en_results.txt  docfetcher_mrobust_ru_queries_ru_results.txt  mrobust_en_la01_indexing_time_plot.csv  mrobust_en_la01_indexing_time_size.csv  mrobust_en_queries_en_query_time_content_semantic_reranking_plot.csv  mrobust_en_queries_en_results_content.txt  mrobust_en_queries_en_results_content_semantic_1.txt  mrobust_en_queries_en_results_content_semantic_10.txt  mrobust_en_queries_en_results_content_semantic_11.txt  mrobust_en_queries_en_results_content_semantic_12.txt  mrobust_en_queries_en_results_content_semantic_2.txt  mrobust_en_queries_en_results_content_semantic_3.txt  mrobust_en_queries_en_results_content_semantic_4.txt  mrobust_en_queries_en_results_content_semantic_5.txt  mrobust_en_queries_en_results_content_semantic_6.5.txt  mrobust_en_queries_en_results_content_semantic_6.txt  mrobust_en_queries_en_results_content_semantic_7.25.txt  mrobust_en_queries_en_results_content_semantic_7.5.txt  mrobust_en_queries_en_results_content_semantic_7.5_reranking_0.5_b8.txt  mrobust_en_queries_en_results_content_semantic_7.5_reranking_0.75_b8.txt  mrobust_en_queries_en_results_content_semantic_7.5_reranking_1.1_b8.txt  mrobust_en_queries_en_results_content_semantic_7.5_reranking_1.25_b8.txt  mrobust_en_queries_en_results_content_semantic_7.5_reranking_1.5_b8.txt  mrobust_en_queries_en_results_content_semantic_7.5_reranking_1_b1.txt  mrobust_en_queries_en_results_content_semantic_7.5_reranking_1_b16.txt  mrobust_en_queries_en_results_content_semantic_7.5_reranking_1_b2.txt  mrobust_en_queries_en_results_content_semantic_7.5_reranking_1_b32.txt  mrobust_en_queries_en_results_content_semantic_7.5_reranking_1_b4.txt  mrobust_en_queries_en_results_content_semantic_7.5_reranking_1_b64.txt  mrobust_en_queries_en_results_content_semantic_7.5_reranking_1_b8.txt  mrobust_en_queries_en_results_content_semantic_7.5_reranking_2_b8.txt  mrobust_en_queries_en_results_content_semantic_7.5_reranking_plot.csv  (+34 more)
indexer/: Cargo.toml
indexer/src/: actions.rs  embeddings.rs  file_server.rs  indexer.rs  main.rs  parser.rs  scanner.rs  search.rs  settings.rs  status.rs  thumbnails.rs  watcher.rs
indexer/src/indexer/: create_index.rs  status.rs
indexer/src/parser/: document.rs  image.rs  multimedia.rs  text.rs
indexer/src/search/: query.rs
install/: tika-config.xml
install/elasticsearch-8.7.0/config/: elasticsearch.yml  jvm.options
launcher/: Cargo.toml
launcher/src/: main.rs
nn_server/: Cargo.toml
nn_server/src/: batch_processing.rs  clip_image.rs  clip_text.rs  lexrank.rs  main.rs  minilm_rerank.rs  minilm_text.rs  text_processing.rs
settings/: Settings_CPU.toml  Settings_Low_VRAM.toml
