[workspace]
members = ["common_lib", "indexer", "client_ui"]

[workspace.dependencies]
anyhow = "1.0.68"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_with = "2.1.0"
toml = "0.5.10"
tokio = { version = "1.23.0", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json", "stream"] }
url = { version = "2.3.1", features = ["serde"] }
percent-encoding = "2.2.0"
derive_more = "0.99.17"
elasticsearch = "8.5.0-alpha.1"
sha2 = "0.10.6"
base16ct = { version = "0.1.1", features = ["alloc"] }
chrono = { version = "0.4.23", features = ["serde"] }
once_cell = "1.16.0"
async-trait = "0.1.60"
mime = "0.3.16"
mime_guess = "2.0.4"
rust-embed = { version = "6.4.2", features = ["interpolate-folder-path"] }
futures = "0.3.25"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
html-escape = "0.2.13"
