[workspace]
members = ["common_lib", "indexer", "client_ui", "nn_server", "benchmarks"]

[workspace.dependencies]
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
serde_with = "2.2.0"
toml = "0.7.1"
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json", "stream"] }
url = { version = "2.3.1", features = ["serde"] }
derive_more = "0.99.17"
elasticsearch = "8.5.0-alpha.1"
sha2 = "0.10.6"
base16ct = { version = "0.1.1", features = ["alloc"] }
chrono = { version = "0.4.23", features = ["serde"] }
async-trait = "0.1.64"
mime = "0.3.16"
mime_guess = "2.0.4"
rust-embed = { version = "6.4.2", features = ["interpolate-folder-path"] }
futures = "0.3.26"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
html-escape = "0.2.13"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-unwrap = "0.10.0"
log = { version = "0.4.17", features = [
    "max_level_debug",
    "release_max_level_info",
] }
clap = { version = "4.1.4", features = ["derive"] }
axum = { version = "0.6.4", features = ["ws"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.3.5", features = ["fs", "trace"] }

[profile.dev.package."*"]
opt-level = 3
