[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
common_lib = { path = "../common_lib" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-unwrap.workspace = true
clap.workspace = true
csv = "1.2.0"
