[package]
name = "client_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
common_lib = { path = "../common_lib" }
serde.workspace = true
serde_json.workspace = true
url.workspace = true
derive_more.workspace = true
chrono.workspace = true
futures.workspace = true
console_error_panic_hook = "0.1.7"
uuid = { version = "1.2.2", features = ["serde", "v4", "js"] }
serde-wasm-bindgen = "0.4.5"
web-sys = { version = "0.3.60", features = [
    "EventTarget",
    "HtmlElement",
    "HtmlDialogElement",
    "Location",
    "WebSocket",
] }
js-sys = "0.3.60"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.33"
gloo-net = "0.2.5"
sycamore = { version = "0.8.2", features = ["suspense", "hydrate"] }

[features]
ssg = ["sycamore/ssr"]
