[package]
name = "client_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
common_lib = { path = "../common_lib" }
serde.workspace = true
serde_json.workspace = true
url.workspace = true
derive_more.workspace = true
chrono.workspace = true
futures.workspace = true
console_error_panic_hook = "0.1.7"
uuid = { version = "1.3.0", features = ["serde", "v4", "js"] }
serde-wasm-bindgen = "0.5.0"
web-sys = { version = "0.3.61", features = [
    "EventTarget",
    "HtmlElement",
    "HtmlDialogElement",
    "Location",
    "WebSocket",
] }
js-sys = "0.3.61"
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.34"
gloo-net = "0.2.6"
sycamore = { version = "0.8.2", features = ["suspense", "hydrate"] }
fluent-bundle = "0.15.2"
unic-langid = "0.9.1"
intl-memoizer = "0.5.1"
