[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_with.workspace = true
url.workspace = true
chrono.workspace = true
uuid.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
