[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
common_lib = { path = "../common_lib" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
url.workspace = true
elasticsearch.workspace = true
sha2.workspace = true
base16ct.workspace = true
chrono.workspace = true
async-trait.workspace = true
mime.workspace = true
mime_guess.workspace = true
rust-embed.workspace = true
uuid.workspace = true
html-escape.workspace = true
clap = { version = "4.1.4", features = ["derive"] }
axum = { version = "0.6.4", features = ["ws"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-unwrap = "0.10.0"
walkdir = "2.3.2"
open = "3.2.0"
rfd = { version = "0.11.0", default-features = false, features = [
    "xdg-portal",
] }
regex = "1.7.1"
notify = { version = "5.1.0", default-features = false, features = [
    "macos_kqueue",
] }
notify-debouncer-mini = { version = "0.2.1", default-features = false }
