[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
common_lib = { path = "../common_lib" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
url.workspace = true
elasticsearch.workspace = true
sha2.workspace = true
base16ct.workspace = true
chrono.workspace = true
async-trait.workspace = true
mime.workspace = true
mime_guess.workspace = true
rust-embed.workspace = true
uuid.workspace = true
html-escape.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-unwrap.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
walkdir = "2.3.2"
open = "3.2.0"
rfd = { version = "0.11.1", default-features = false, features = [
    "xdg-portal",
] }
regex = "1.7.1"
notify = { version = "5.1.0", default-features = false, features = [
    "macos_kqueue",
] }
notify-debouncer-mini = { version = "0.2.1", default-features = false }
