[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
common_lib = { path = "../common_lib" }
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-unwrap.workspace = true
clap.workspace = true
