[package]
name = "nn_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-unwrap.workspace = true
log.workspace = true
clap.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
once_cell = "1.17.1"
image = "0.24.5"
ndarray = { version = "0.15.6", features = ["serde"] }
nshare = { version = "0.9.0", features = ["image", "ndarray"] }
tokenizers = "0.13.2"
srx = { version = "0.1.3", features = ["from_xml"] }
onnxruntime = { git = "https://github.com/ArtSin/onnxruntime/" }
batched-fn = "0.2.4"
