[package]
name = "nn_server"
version = "0.1.0"
edition = "2021"

[dependencies]
common_lib = { path = "../common_lib" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-unwrap.workspace = true
log.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
once_cell = "1.17.1"
image = "0.24.6"
ndarray = { version = "0.15.6", features = ["serde", "approx"] }
nshare = { version = "0.9.0", features = ["image", "ndarray"] }
tokenizers = "0.13.2"
onnxruntime = { git = "https://github.com/ArtSin/onnxruntime/" }
